fixed hot reload

--- a/app/index.jade
+++ b/app/index.jade
@@ -5,4 +5,4 @@ html(lang="de")
     meta(charset="utf-8")
   body(id="app")
     router-view(v-bind:available-routes="availableRoutes")
-    script(src="out/index.js")
+    script(src="index_bundle.js")
