--- a/app/index.pug
+++ b/app/index.pug
@@ -3,6 +3,6 @@ doctype html
 html(lang="de")
   head
     meta(charset="utf-8")
-  body(id="app")
-    router-view(v-bind:available-routes="availableRoutes")
+  body
+    #app
     script(src="index_bundle.js")
